--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <i class="fa-solid fa-bars"></i>
             </label>
             <ul>
-                <li><a class="active" href="Index.html">Inicio</a></li>
+                <li><a class="active" href="index.html">Inicio</a></li>
                 <li><a href="Ofertas.html">OFERTAS</a></li>
                 <li><a href="Productos.html">PRODUCTOS</a></li>
                 <li><a href="Contactos.html">CONTACTO</a></li>
