cambio en index

--- a/Contactos.html
+++ b/Contactos.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header><nav><li><a href="Index.html">Inicio</a></li></nav></header>
+    <header><nav><li><a href="index.html">Inicio</a></li></nav></header>
     <h1>Contactos</h1>
 
 </body>
