--- a/Productos.html
+++ b/Productos.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header><nav><li><a href="Index.html">Inicio</a></li></nav></header>
+    <header><nav><li><a href="index.html">Inicio</a></li></nav></header>
     <h1>Productos</h1>
 </body>
 </html>
